--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "next": "latest",
+    "nodemailer": "^6.9.14",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
